Changelog:

2016-02-27 Release 2.2.0
 * Checkbox to mark and filter Watched movies by Alexander Deyke
 * Remember theme selection by Alexander Deyke

2016-02-25 Release 2.1.0
 * New themes: dark-grid and dark-columns by Roni Laukkarinen
 * Links icons

2016-01-11 Release 2.0.2
 * Fixed poster images
 * Fixed caching of guessed titles

2016-01-05 Release 2.0.1
 * Fixed poster images for new imdb formatting (thanks to mmocoroa)
   It is recomended that you delete old report/images files
 * Fixed runtime
 * Fixed the "wide character" warning during scan

2015-11-12 Release 2.0.0
 * Fixed quotes in origtitle
 * Fixed year filter input box
 * Added 3D tag
 * Open external links in new window
 * Hide location with multiple entries
 * Minor location formatting changes
 * Updated subtitles and other links
 * Deprecated interactive mode
 * Show all filters by default

2013-02-23 Release 1.9.1
 * Updated IMDB rating
 * Minor performance fixes of cached files
 * Make some perl modules optional

2013-02-06 Release 1.9.0
 * Updated for IMDB site changes
 * Removed deprecated use of goto in perl

2011-11-13 Release 1.8.1
 * Updated parsing of movie title

2011-09-24 Release 1.8.0
 * Updated parsing of IMDB rating value
 * Set default theme to white


2010-11-16 Release 1.7.1
 * Fixed -origtitle when movie is guessed
 * Added theme "grey" which is now the default (by Roni Laukkarinen)
 * Updated white theme (better compatibility with firefox and ie)


2010-11-15 Release 1.7.0
 * new options: -origtitle and -deftitle
   -origtitle will use the original instead of the regional title
 * better unicode handling
 * improved search for series
 * minor search improvement for movies with () in title
 * minor black and white theme update (by Roni Laukkarinen)


2010-11-12 Release 1.6.1
 * Added noposter.png that was missing in 1.6.0
 * Minor theme .css update


2010-11-11 Release 1.6.0
 * Added theming support (thanks to Roni Laukkarinen)